# PVNDORA_AI_SHOP

./: .coverage  .gitignore  .importlinter  .mypy.ini  .prettierignore  .python-version  .sonarcloud.properties  .vulture.ini  ARCHITECTURE_ANALYSIS.md  DIAGNOSTICS_REPORT.md  LEADERBOARD_ANALYSIS.md  OPTIMIZATION_RESULTS.md  PROJECT_FILE_TREE.md  PROJECT_MAP.md  Pipfile  REFACTORING_INIT_INSTRUCTIONS.md  REFACTORING_PLAN.md  REFACTORING_PLAN_AGENT_1_CLEANUP.md  REFACTORING_PLAN_AGENT_2_SPLITTING.md  REFACTORING_PLAN_AGENT_3_OPTIMIZATION.md  REFACTORING_ROADMAP.md  REFACTORING_STATUS.md  REFACTORING_ZONES.md  SETUP.md  TEST_STATUS.md  TEST_VALIDATION_REPORT.md  WEBHOOK_DEBUG.md  analyze_all_reliability.py  analyze_reliability_issues.py  backup.md  biome.json  brief.md  coverage.xml  env.example  eslint.config.js  f7f45338-a334-44be-84d7-d15c3770bc97.txt  index.html  mypy.ini  mypy_strict_temp.ini  package-lock.json  (+17 more)
.cursor/plans/: pv-627b7c-6f20b825.plan.md  pv-6f65ce-9fddf0cc.plan.md
.cursor/rules/: architecture.mdc  code-quality.mdc  development-workflow.mdc  documentation-reference.mdc  localization-configuration.mdc  platform-limits.mdc  research-guidlines.mdc
.github/workflows/: deploy.yml
api/: .vc-config.json  index.py  models.py  test.py
api/cron/: __init__.py  auto-alloc.py  auto_alloc.py  check_pending_payments.py  cleanup_studio_files.py  daily-cleanup.py  daily_cleanup.py  deliver_overdue_discount.py  discount_offers.py  expire-order.py  expire-orders.py  expire_orders.py  low_stock_alert.py  reengagement.py  refund_expired_prepaid.py  unified.py  update_exchange_rates.py
api/og/: referral.js
api/workers/: deliver_discount_order.py  process_review_cashback.py  process_studio_generation.py
bot_setup/: bot_info.json
core/: __init__.py  ai.py  auth.py  bot.py  cart.py  db.py  errors.py  logging.py  models.py  payments.py  queue.py  rag.py  realtime.py
core/agent/: __init__.py  agent.py  prompts.py  tools.py
core/ai/: __init__.py  consultant.py
core/auth/: __init__.py  cron.py  dependencies.py  session.py  telegram.py
core/bot/: __init__.py  keyboards.py  middlewares.py  states.py
core/cart/: __init__.py  models.py  service.py  storage.py
core/handlers/: __init__.py  callbacks.py  inline.py  messages.py
core/i18n/: __init__.py  translations.py
core/middleware/: query_monitor.py  rate_limit.py  security.py
core/observability/: __init__.py  digma_setup.py
core/orders/: __init__.py  serializer.py  status_service.py
core/payments/: __init__.py  config.py  constants.py
core/routers/: __init__.py  admin.py  cron.py  deps.py  products.py  user.py  webapp.py  webhooks.py  workers.py
core/services/: __init__.py  admin_alerts.py  currency.py  currency_response.py  database.py  models.py  money.py  notifications.py  payments.py  telegram_messaging.py
core/studio/: __init__.py  dispatcher.py  service.py
core/utils/: __init__.py  validators.py
docs/: 1PLAT_DIAGNOSIS.md  1PLAT_LK_CHECKLIST.md  1PLAT_TROUBLESHOOTING.md  ADMIN_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_PATTERNS.md  AUTHENTICATION.md  AUTHENTICATION_ROADMAP.md  BOT_COMMANDS.md  BROADCAST_SYSTEM.md  BUGFIX_partner_analytics.md  Brief.md  CARDLINK_INTEGRATION.md  CODE_QUALITY.md  CRON_JOBS.md  CRYSTALPAY_MODERATION_RESPONSE.md  CURRENCY_LOCALIZATION.md  DATABASE_CLEANUP_PLAN.md  DISCOUNT_CHANNEL_STRATEGY.md  EMOJI_DESIGN_BRIEF.md  FREEKASSA_INTEGRATION.md  FRONTEND_ARCHITECTURE.md  FRONTEND_BACKEND_ALIGNMENT_REPORT.md  GITHUB_ACTIONS_SETUP.md  LEGAL_MODERATION_CHECKLIST.md  LEGAL_TERMINOLOGY_ANALYSIS.md  LOCAL_SETUP.md  ON_DEMAND_ORDERS.md  OPTIMIZATION_RECOMMENDATIONS.md  ORDER_STATUSES.md  PARALLELIZATION_EXPLANATION.md  PAYMENT_DELIVERY_REFACTORING_REPORT.md  PAYMENT_GATEWAYS_SUMMARY.md  PAYMENT_METHODS_FLOW.md  PRICING_EXPLANATION.md  PRODUCTION_READINESS_TEST_PLAN.md  PRODUCT_CARD_MEDIA.md  QSTASH_EXPLAINED.md  README.md  REFACTORING_ZONES.md  (+20 more)
locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ru.json  tr.json  uk.json
public/: f7f45338-a334-44be-84d7-d15c3770bc97.txt  site.webmanifest
public/sounds/: README.md
pvndora/: App.tsx  README.md  index.html  metadata.json  package.json
pvndora/components/: AdminPanel.tsx  Catalog.tsx  CommandPalette.tsx  Guarantees.tsx  Hero.tsx  Leaderboard.tsx  Legal.tsx  Orders.tsx  PandoraBox.tsx  ProductDetail.tsx  Profile.tsx
scripts/: README.md  analyze_audio.py  apply_exchange_rates_migration.py  apply_migrations.py  check_build.py  check_code_quality.py  check_db.py  check_db_api_mismatch.py  check_webhook.py  clean_git_tracked.py  cleanup_test_data.sql  compare_duplicates.py  diagnose_webhook.py  get_latest_deployment_logs.ps1  get_latest_deployment_logs.py  get_latest_deployment_logs.sh  migrate_bot.py  prepare_test_database.sql  run_sonarqube.py  set_discount_webhook.py  set_webhook.py  setup_bot.py  test_exchange_api.py  test_webhook.py  validate_migration.py
scripts/audio_analysis/: analysis.json
scripts/migrations/: 003_add_referral_clicks.sql  004_add_product_categories.sql  005_add_product_image_url.sql  add_referral_clicks.sql
src/: App.jsx  NewApp.tsx  __init__.py  config.ts  index.css  main.jsx  main.tsx
src/adapters/: cartAdapter.ts  index.ts  leaderboardAdapter.ts  ordersAdapter.ts  productAdapter.ts  profileAdapter.ts
src/ai/: consultant.py  prompts.py  tools.py
src/api/: client.js  studio.ts
src/bot/: handlers.py  keyboards.py  middlewares.py
src/components/: DesktopLayout.jsx  Footer.jsx  LoadingScreen.jsx  Navigation.jsx  PartnerDashboard.jsx  ProductCard.jsx  StarRating.jsx  TextWithLinks.jsx
src/constants/: index.ts
src/contexts/: CartContext.tsx  LocaleContext.tsx
src/hooks/: useAdmin.js  useAdmin.ts  useAdminRealtime.ts  useApi.js  useApi.ts  useApiTyped.ts  useCheckoutFlow.js  useCheckoutFlow.ts  useClipboard.ts  useErrorHandler.ts  useLeaderboardRealtime.ts  (+12 more)
tests/: README.md  __init__.py  conftest.py  test_ai_tools.py  test_api.py  test_cart.py  test_database.py  test_handlers.py  test_i18n.py  test_models.py  test_notifications.py  test_payments.py  test_validators.py
(+362 files in other folders)
