[project]
name = "pvndora"
version = "1.0.0"
description = "AI-powered Telegram marketplace for digital goods"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiogram>=3.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "google-genai>=1.0.0",
    "supabase>=2.10.0",
    "AaioAPI>=2.5.6",
    "stripe>=10.0.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-i18n>=0.3.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

