[project]
name = "pvndora"
version = "0.1.0"
description = "PVNDORA - Telegram Bot Marketplace with AI Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "aiogram>=3.20.0",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "supabase>=2.10.0",
    "upstash-redis==1.5.0",
    "stripe>=10.0.0",
    "qstash>=3.0.0",
    "httpx>=0.27.0",
    "pytest>=7.4.0",
    # Vercel/uv requirements (not used in serverless, but required for dependency resolution)
    "werkzeug>=1.0.1",
    "uvicorn>=0.24",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["venv", ".venv", "node_modules", "dist", "build"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "scripts/",  # Scripts use print() for CLI output - this is normal
    "tests/",  # Tests may have different style requirements
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = [
    "E501",  # Line too long - handled by black
    "PLR0912",  # Too many branches - acceptable for complex business logic
    "PLR0915",  # Too many statements - acceptable for cron jobs
    "PLR0913",  # Too many arguments - acceptable for complex business logic
    "PLR0911",  # Too many return statements - acceptable for complex logic
    "PLC0415",  # Import at top-level - sometimes needed for conditional/lazy imports
    "TRY300",  # Consider else block - not always more readable
    "TRY301",  # Abstract raise - not always more readable
    "TRY003",  # Exception messages - acceptable to use string literals
    "PLR2004",  # Magic value in comparison - HTTP status codes are standard, no need for constants
    "RUF001",  # Ambiguous characters - acceptable in strings (unicode, emojis, non-English text)
    "RUF002",  # Ambiguous characters in docstrings - acceptable for multilingual docs
    "RUF013",  # Implicit Optional - acceptable, will migrate to explicit Optional gradually
    "RUF059",  # Unused unpacked variable - acceptable when unpacking tuples
    "SIM105",  # Use contextlib.suppress - try/except/pass is acceptable for non-critical ops
    "PTH123",  # Use Path.open() - open() is fine for simple cases
    "ERA001",  # Commented code - sometimes useful for documentation
    "PT011",  # pytest.raises too broad - acceptable for simple tests
    "PLW0603",  # Global statement - acceptable for module-level caching
    "B008",  # Depends in argument defaults - standard FastAPI pattern
    "B904",  # raise in except - acceptable, will add from None gradually
    "EM101",  # Exception string literal - acceptable for simple error messages
    "EM102",  # Exception f-string - acceptable for dynamic error messages
    "ARG001",  # Unused function argument - may be used in future or for API compatibility
    "ARG002",  # Unused method argument - may be used in future or for API compatibility
    "N806",  # Variable naming - constants in functions are acceptable
    "TID252",  # Relative imports - acceptable for package structure
    "RET504",  # Unnecessary assignment - acceptable for clarity
    "I001",  # Import sorting - handled by isort
    "E402",  # Module level import not at top - sometimes needed for conditional imports
    "RUF022",  # __all__ sorting - acceptable, manually organized
    "ISC001",  # String concatenation - acceptable for readability
    "C401",  # Set comprehension - generator is acceptable
    "PGH003",  # type: ignore - acceptable for TYPE_CHECKING blocks
    "B028",  # warnings.warn stacklevel - acceptable for simple warnings
    "B007",  # Unused loop variable - acceptable when iterating for side effects
    "N815",  # MixedCase variables - needed for API compatibility (Pydantic models)
    "PLW2901",  # Loop variable overwritten - acceptable for in-place modification
    "RUF006",  # Store task reference - not needed for fire-and-forget tasks
    "RUF046",  # Unnecessary int() call - defensive programming is acceptable
    "RUF012",  # ClassVar - acceptable for class-level constants
    "PLC0206",  # Dictionary iteration - acceptable for clarity
    "RUF034",  # Useless if-else - acceptable for future localization
]

[tool.ruff.lint.isort]
known-first-party = ["core", "api"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = false
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "aiogram.*",
    "qstash.*",
    "langchain.*",
    "langgraph.*",
    "openai.*",
    "stripe.*",
    "tenacity.*",
]
ignore_missing_imports = true

# Supabase async client has typing issues with await
[[tool.mypy.overrides]]
module = [
    "core.services.repositories.*",
]
disable_error_code = ["misc", "arg-type"]

# Allow broader types in database layer
[[tool.mypy.overrides]]
module = [
    "core.services.database",
]
disable_error_code = ["union-attr", "index", "arg-type", "return-value"]

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "C0103", # invalid-name
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
    "W1203", # logging-fstring-interpolation
    "W0718", # broad-exception-caught
    "C0415", # import-outside-toplevel
    "W0603", # global-statement
    "R0914", # too-many-locals
    "R0912", # too-many-branches
    "R0915", # too-many-statements
    "W0212", # protected-access
]

[tool.pylint.format]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["venv", ".venv", "node_modules", "dist", "build", "tests"]
skips = [
    "B101",  # assert_used
    "B601",  # shell_injection_subprocess
    "B110",  # try_except_pass (intentional for non-critical operations)
    "B311",  # random (used for delays, not security)
]
# B324 (weak hash) - SHA1 used for CrystalPay API signature verification (their requirement)
